css/schedule.css
/* ... */
		#kompassi_schedule[data-display="list"] article summary {
			display: grid;
			grid-template-columns: 1fr min-content;
			grid-template-areas: "title actions" "secondary secondary";
			padding: var(--kompassi-padding);
		}
			#kompassi_schedule[data-display="list"] article summary .favorite::before {
				margin-right: 0;
			}
			#kompassi_schedule[data-display="list"] article summary .secondary {
				display: flex;
				justify-content: space-between;
			}
				#kompassi_schedule[data-display="list"] article summary .secondary > :last-child {
					text-align: right;
				}
		#kompassi_schedule[data-display="list"] article section {
			border-top: 1px solid var(--kompassi-fg-10);
		}
			#kompassi_schedule[data-display="list"] article section > * {
				padding: 0 var(--kompassi-padding);
				margin-bottom: var(--kompassi-padding);
			}
				#kompassi_schedule[data-display="list"] article section .main {
					padding: var(--kompassi-padding);
				}
		#kompassi_schedule[data-display="list"] article section .meta:has(+ .actions) {
			margin-bottom: 0;
		}
		#kompassi_schedule[data-display="list"] article section .actions > a::before {
			content: unset;
		}
		#kompassi_schedule[data-display="list"] article section .actions > a::after {
			content: attr(title);
		}
		#kompassi_schedule[data-display="list"] article section .meta .in-summary {
			display: none;
		}

/*  Show icon  */
/*  TODO: Prefer container query  */
@media screen and (min-width:600px) {
	#kompassi_schedule[data-display="list"] {
		--kompassi-program-list-padding: 0.6em;
		--kompassi-program-list-visual-width: 5.5em;
	}
	#kompassi_schedule[data-display="list"] article {
		padding-left: var(--kompassi-program-list-visual-width);
		grid-template-columns: 50% auto auto;
		grid-template-areas:
			"title title actions"
			"meta meta meta";
	}
}

/*  Display Style: Timeline  */
#kompassi_schedule[data-display="timeline"] {
	position: relative;
	color: var(--kompassi-fg);
	background-color: var(--kompassi-bg);
	overflow: hidden;
	box-shadow: var(--kompassi-box-shadow);
	border-radius: var(--kompassi-radius);
}
	#kompassi_schedule[data-display="timeline"] .headers {
		position: absolute;
		top: 0;
		width: 100%;
	}
		#kompassi_schedule[data-display="timeline"] .headers .hint {
			position: absolute;
			padding: var(--kompassi-schedule-timeline-row-padding);
			background-color: var(--kompassi-bg);
			overflow: hidden;
		}
			#kompassi_schedule[data-display="timeline"] .headers .day_hint {
				width: 100%;
			}
			#kompassi_schedule[data-display="timeline"] .headers .time_hint {
				top: var(--kompassi-schedule-timeline-row-height);
			}
				#kompassi_schedule[data-display="timeline"] .headers.sticky .time_hint {
					border-left: 1px solid var(--kompassi-fg-10);
					border-top: 1px solid var(--kompassi-fg-10);
				}
		#kompassi_schedule[data-display="timeline"] .headers.sticky {
			z-index: 10;
			box-shadow: var(--kompassi-box-shadow);
		}
	#kompassi_schedule[data-display="timeline"] .ruler {
		width: auto;
		height: 100%;
		border-top: 1px solid var(--kompassi-fg-10);
		border-left: 1px solid var(--kompassi-fg-10);
		padding: 3px;
		color: var(--kompassi-schedule-fg-50);
		position: absolute;
		top: 0;
		bottom: 0;
	}
		#kompassi_schedule[data-display="timeline"] .ruler:first-of-type {
			border-left-color: transparent;
		}
	#kompassi_schedule[data-display="timeline"] :is(.group-name,article) {
		padding: var(--kompassi-schedule-timeline-row-padding);
		position: absolute;
	}
		#kompassi_schedule[data-display="timeline"] .group-name {
			display: block;
			color: var(--kompassi-fg);
			background-color: var(--kompassi-palette-4);
			border-radius: var(--kompassi-radius);
			position: absolute;
			left: 3px;
			right: 3px;
			z-index: 3;
			margin: 0;
		}
		#kompassi_schedule[data-display="timeline"] article {
			position: relative;
			order: 1 !important;
			display: inline-block;
			background-color: var(--kompassi-program-color,var(--kompassi-program-color-default));
			background-image: linear-gradient(to bottom,rgba(0,0,0,0.25),rgba(0,0,0,0.15));
			color: #fff;

			z-index: 5;
			white-space: nowrap;
			overflow: hidden;
		}
			#kompassi_schedule[data-display="timeline"] article summary :is(.favorite, .secondary) {
				display: none;
			}
			#kompassi_schedule[data-display="timeline"] article.is-favorite .title {
				position: relative;
				padding-left: calc( 1em + 8px );
			}
				#kompassi_schedule[data-display="timeline"] article.is-favorite .title::after {
					position: absolute;
					display: inline-block;
					content: '';
					left: 4px;
					top: 2px;
					bottom: 2px;
					width: 1em;
					background-size: contain;
					background-position: 50% 50%;
					background-repeat: no-repeat;
				}
					#kompassi_schedule[data-display="timeline"] article.is-favorite.continues .title::after {
						left: calc(4px + 1em);
					}
			#kompassi_schedule[data-display="timeline"] article:hover {
				margin-top: -2px;
				box-shadow: 0 0 1em rgba(0,0,0,0.2);
				text-shadow: 0.05em 0.05em 0.1em rgba(0,0,0,0.8);
				filter: brightness(1.25);
				min-width: min-content !important;
				z-index: 2000;
			}
			#kompassi_schedule[data-display="timeline"] article :is(.title) {
				display: block;
			}
			#kompassi_schedule[data-display="timeline"] article.continues :is(.title)::before {
				content: '';
				display: block;
				float: left;
				width: var(--kompassi-line-height);
				height: var(--kompassi-line-height);
				margin-left: calc(-1 * var(--kompassi-schedule-timeline-row-padding));
				margin-right: var(--kompassi-schedule-timeline-row-padding);
				background: transparent url(../images/icons/arrow_left.svg);
				background-size: contain;
				background-repeat: no-repeat;
				filter: invert();
			}
/* ... */

